--- a/ToDoList/src/App/style.css
+++ b/ToDoList/src/App/style.css
@@ -1,3 +1,9 @@
-.hw {
-    color: black;
+*{
+    margin: 0;
+    box-sizing: border-box;
+}
+
+.App {
+    height: 100vh;
+    width: 100vw;    
 }
