--- a/ToDoList/src/App/style.css
+++ b/ToDoList/src/App/style.css
@@ -1,9 +1,13 @@
 *{
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .App {
     height: 100vh;
-    width: 100vw;    
+    width: 100vw; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;      
 }
