--- a/ToDoList/src/Task/style.css
+++ b/ToDoList/src/Task/style.css
@@ -1,17 +1,41 @@
 .task {
-    background-color: gray;
-    height: 48px;
-    padding: 8px;
+    width: 100%;
+    background-color: rgb(79, 75, 82);
+    height: 100px;    
     border: 1px solid black;
     border-radius: 4px;
     margin-bottom: 4px;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;   
 }
 
 .task:hover {
     background-color: rgb(221, 217, 217);
     cursor: pointer;
+}
+
+.optionsTask {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2px;    
+}
+
+.contentTask {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.datesTask {
+    font-size: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-end;
 }
