--- a/ToDoList/src/Task/style.css
+++ b/ToDoList/src/Task/style.css
@@ -1,45 +1,48 @@
 .task {
-    width: 100%;
-    background-color: rgb(79, 75, 82);
-    height: 100px;    
-    border: 1px solid black;
-    border-radius: 4px;
-    margin-bottom: 4px;
-    display: flex;
-    flex-direction: column; 
-    user-select: none;
+  position: relative;
+  width: 100%;
+  background-color: rgb(79, 75, 82);
+  height: 150px; 
+  min-height: 150px;   
+  border: 1px solid black;
+  border-radius: 4px;
+  margin-bottom: 4px;  
+  user-select: none;    
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .task:hover {
-    opacity: 0.9;   
+  opacity: 0.9;   
 }
 
-.optionsTask {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2px;    
+
+
+.divOptionsTask {
+  width: 100%;
+  display: flex;
+  justify-content: end;
+  padding-right: 5px;
 }
 
-.bt:hover {
-    cursor: pointer;
-}
 
 .contentTask {
-    width: 100%;
-    height: 50%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+  position: absolute;
+  width: 100%;  
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .datesTask {
-    font-size: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: flex-end;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+  font-size: 10px;
+  bottom: 0;
 }
