--- a/ToDoList/src/App/style.css
+++ b/ToDoList/src/App/style.css
@@ -1,13 +1,27 @@
 *{
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Quicksand', sans-serif;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Quicksand', sans-serif;
+  color: white;
 }
 
 .App {
-    height: 100vh;
-    width: 100vw; 
-    display: flex;
-    flex-direction: column;
-    align-items: center;      
+  height: 100vh;
+  width: 100vw; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;    
+  
+  background-color: rgb(30, 32, 30)
+}
+
+button {
+  background-color: rgb(19, 22, 19);
+  border: none;
+  border-radius: 5px;  
+}
+
+button:hover {
+  background-color: rgb(68, 70, 68);
+  cursor: pointer;
 }
