--- a/ToDoList/src/Task/style.css
+++ b/ToDoList/src/Task/style.css
@@ -1,10 +1,9 @@
 .task {
   position: relative;
   width: 100%;
-  background-color: rgb(79, 75, 82);
+  background-color:rgb(54, 64, 73);
   height: 150px; 
   min-height: 150px;   
-  border: 1px solid black;
   border-radius: 4px;
   margin-bottom: 4px;  
   user-select: none;    
@@ -12,10 +11,11 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  font-size: xx-large;
 }
 
 .task:hover {
-  opacity: 0.9;   
+  opacity: 0.8;
 }
 
 
