--- a/ToDoList/src/Tasks/style.css
+++ b/ToDoList/src/Tasks/style.css
@@ -1,8 +1,8 @@
-.tasks, .addingNewTask {
+.tasks {
   display: flex;
   flex-direction: column;
   justify-content: start;  
-  height: 50%;
+  height: auto;
   width: 100%;    
 }
 
