--- a/ToDoList/src/components/AddTaks/style.css
+++ b/ToDoList/src/components/AddTaks/style.css
@@ -52,15 +52,14 @@
   justify-content: space-between;
 }
 .inputNewTask {
+  color: gray;
   user-select: none;
   border: none;
   outline: none;
   width: 90%;
   height: 100%;
   border-radius: 4px;
-  padding-left: 10px;
-
-  
+  padding-left: 10px;  
 }
 
 .inputDeadline {   
