--- a/ToDoList/src/components/Day/style.css
+++ b/ToDoList/src/components/Day/style.css
@@ -1,6 +1,10 @@
-.day {
+.day { 
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.day h1 {
+  color: red;
 }
