--- a/ToDoList/src/components/OptionsTask/style.css
+++ b/ToDoList/src/components/OptionsTask/style.css
@@ -1,32 +1,42 @@
-.optionsTask {
+.optionsTask {  
   position: relative;
   width: min-content;
-  height: min-content;
-  position: relative;
-  margin-right: 0;
+  height: min-content;  
   font-size: small;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.optionsTask button {
+  width: 100%;
+  border-radius: 0%;
+}
+
+.optionsTask button:hover {
+  background-color: #332323;
+}
+
+.buttonOptionsTask {
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
 
-.optionsTask summary {
-  list-style-type: '' ;
-  width: 15px;
-  
- 
-  
+
+@keyframes rotation {
+	0% {
+    
+		transform: rotate(0);
+	}
+  100% {
+    transform: rotate(180deg);
+  }
 }
 
-.optionsTask:hover {
-  opacity: 0.9;
-}
 
-.optionsTask[open] {
-  
-}
 
-.optionsTask[open] summary {
- 
 
-}
 
 
