--- a/ToDoList/src/components/Calendar/style.css
+++ b/ToDoList/src/components/Calendar/style.css
@@ -1,6 +1,23 @@
 .calendar {
-  width: 70%;
+  width: 100%;
+  height: 235px;
   display: flex;
-  flex-direction: column;
+}
+
+.dateSelector {
+  --rdp-cell-size: 25px !important;  
+  background-color: #000000;
+  border-radius: 5%;
+}
+
+.rdp-caption h2{
+  width: 120px;
+  font-size: 0.8rem;
+}
+
+.viewDay {
+  display: flex;
   align-items: center;
+  justify-content: space-around;
+  width: 100%;
 }
