--- a/ToDoList/src/components/MinCalendar/style.css
+++ b/ToDoList/src/components/MinCalendar/style.css
@@ -1,45 +1,48 @@
 .minCalendar {
-  width: 11rem;
-  height: 11.5rem;
+  width: 12rem;
+  height: 12rem;
   background: #000000;
   border-radius: 5%;
 
 }
 
+.monthYearDay {
+  height: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .monthYear {
   width: 100%;
+ 
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .numbersOfDays {
-  padding: 2%;
-}
-
-.numbersOfDays thead, .numbersOfDays tbody, .numbersOfDays table {
-  padding: 0;
-  margin: 0;
   width: 100%;
-  height: 100%;
-  border: none;
+  height: 80%;
+  padding-left: 2%;
+  padding-top: 2%;
+  display: grid;
+  grid-template-rows: 14% 14% 14% 14% 14% 14% 14%;
+  grid-template-columns: 14% 14% 14% 14% 14% 14% 14%;
 }
 
-
-
-
-.numbersOfDays tr {
-  display: flex;
-  justify-content: space-around; 
-  height: 100%;
-}
-
-.numbersOfDays td {
-  width: 14%;  
+.numbersOfDays span {
   text-align: center;
   border-radius: 15%;
 }
 
-.numbersOfDays td:hover {
-  background: #1414a0;
+.numbersOfDays span:hover {
   cursor: pointer;
+  background: #0421a3;
   font-weight: bold;
+  transform: scale(1.2);
 }
+
+
+
+
